[package]
name = "wiki_scan"
version = "0.1.0"
authors = ["michael-bailey <mickyb18a@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0.15"
tokio = { version = "1.21.1", features = ["full"] }
tokio-stream = {version = "0.1.10", features=["fs"]}
async-recursion = "1.0.0"
serde_json = "1.0.87"
reqwest = "0.11.12"
futures = "0.3.25"
serde = "1.0.147"
soup = "0.5.1"
url = "2.3.1"